Feature partitions rdds (#1)
* update to dashbase spark.

* add structure.